# nameof

./: README.md
.github/workflows/: install.yml
doc/: limitations.md  reference.md
include/: nameof.hpp
test/: test.cpp
test/cmake-consumer/: CMakeLists.txt  main.cpp
